--- a/BitMap/.vscode/tasks.json
+++ b/BitMap/.vscode/tasks.json
@@ -3,7 +3,7 @@
         {
             "type": "shell",
             "label": "gcc build active file",
-            "command": "/usr/bin/gcc",
+            "command": "C:/mingw/bin/gcc",
             "args": [
                 "-g",
                 "${file}",
@@ -11,8 +11,11 @@
                 "${fileDirname}/${fileBasenameNoExtension}"
             ],
             "options": {
-                "cwd": "/usr/bin"
-            }
+                "cwd": "C:/mingw/bin/gcc"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ]
         }
     ],
     "version": "2.0.0"
